--- a/src/index.html
+++ b/src/index.html
@@ -19,11 +19,13 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <script type="text/javascript">
-      console.log('hello, ming')
+      console.log('console, ming')
     </script>
   </head>
   <body>
     <p>hello, ming</p>
+    <div id="root"></div>
+    <script type="module" src="./main.tsx"></script>
     <div class="mockup-phone">
       <div class="camera"></div>
       <div class="display">
