--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,10 @@
-<div class="m-5">
-  <h2 class="mb-4 text-2xl text-green-700 font-bold">Toggle</h2>
-  🌞
-  <div class="inline-block w-10">
-    <span
-      data-toggle-theme="dark"
-      data-act-class="pl-4"
-      class="border rounded-full border-green-700 flex items-center cursor-pointer w-10 transition-all duration-300 ease-in-out pl-0"
-    >
-      <span class="rounded-full w-3 h-3 m-1 bg-green-700"></span>
-    </span>
-  </div>
-  🌚
-</div>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>🐯</title>
+    <link rel="icon" href="/favicon.ico" />
     <style type="text/css">
       p {
         color: rgb(200, 255, 0);
@@ -53,7 +46,7 @@
     <script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.1/index.js"></script>
 
     <script type="text/javascript">
-      console.log('console, ming')
+      console.log('console, ming 🌞')
     </script>
   </head>
   <body>
@@ -71,6 +64,8 @@
       </div>
       🌚
     </div>
+
+    <img src="happy.svg" alt="My Happy SVG" />
 
     <div class="m-5">
       <h2 class="mb-4 text-2xl text-green-700 font-bold">Buttons</h2>
