rc1 to ✅  Production: https://demo.muzamint.com

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>🐯</title>
-    <link rel="icon" href="/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon_io/favicon-32x32.png"
+    />
+
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon_io/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./favicon_io/site.webmanifest" />
     <style type="text/css">
+      body {
+        background-image: url(happy.svg);
+      }
       p {
         color: rgb(200, 255, 0);
         text-align: center;
@@ -64,8 +85,6 @@
       </div>
       🌚
     </div>
-
-    <img src="happy.svg" alt="My Happy SVG" />
 
     <div class="m-5">
       <h2 class="mb-4 text-2xl text-green-700 font-bold">Buttons</h2>
