--- a/src/index.html
+++ b/src/index.html
@@ -70,11 +70,20 @@
   <body>
     </div>
     <div>
-      <div class="relative min-h-screen flex">
+      <div class="relative min-h-screen md:flex">
+        <!-- mobile menu bar -->
+        <div class="bg-gray-800 text-gray-100 flex justify-between md:hidden">
+          <!-- logo --> 
+          <a href="#" class="block p-4 text-white font-bold">MS-hack</a>
+          <!-- menu button -->
+          <button class="mobile-menu-button p-4 focus:outline-none focus:bg-gray-700"><svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+          </svg></button>
+        </div>
         <!-- sidebar -->
-        <div class="bg-blue-800 text-blue-100 w-64 space-y-6">
+        <div class="sidebar bg-blue-800 text-blue-100 w-64 space-y-6 py-7 px-2 absolute inset-y-0 left-0 transform -translate-x-full transition duration-200 easy-in-out md:relative md:translate-x-0">
           <!-- logo -->
-          <a href="#" class="text-white flex item-center space-x-2">
+          <a href="#" class="text-white flex item-center space-x-2 px-4">
           <svg class="w-8 h-8" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 9a2 2 0 012-2h.93a2 2 0 001.664-.89l.812-1.22A2 2 0 0110.07 4h3.86a2 2 0 011.664.89l.812 1.22A2 2 0 0018.07 7H19a2 2 0 012 2v9a2 2 0 01-2 2H5a2 2 0 01-2-2V9z" />
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 13a3 3 0 11-6 0 3 3 0 016 0z" />
@@ -83,10 +92,10 @@
           </a>
           <!-- nav -->
           <nav>
-            <a href="#" class="block py-2.5 px-4">Home</a>
-            <a href="#" class="block py-2.5 px-4">About</a>
-            <a href="#" class="block py-2.5 px-4">Features</a>
-            <a href="#" class="block py-2.5 px-4">Pricing</a>
+            <a href="#" class="block py-2.5 px-4 rounded transition duration-300 hover:bg-red-400 hover:text-white">Home</a>
+            <a href="#" class="block py-2.5 px-4 rounded transition duration-300 hover:bg-red-400 hover:text-white">About</a>
+            <a href="#" class="block py-2.5 px-4 rounded transition duration-300 hover:bg-red-400 hover:text-white">Features</a>
+            <a href="#" class="block py-2.5 px-4 rounded transition duration-300 hover:bg-red-400 hover:text-white">Pricing</a>
           </nav>
         </div>
         <!-- content -->
@@ -109,5 +118,6 @@
         </div>
       </div>
     </div>
+    <script src="./index.js"></script>
   </body>
 </html>
