--- a/src/index.html
+++ b/src/index.html
@@ -115,6 +115,78 @@
             </div>
             🌚
           </div>
+          <div class="m-5">
+            <h2 class="mb-4 text-2xl text-green-700 font-bold">Buttons</h2>
+            <button
+              data-act-class="shadow-outline"
+              data-set-theme=""
+              class="bg-green-700 focus:outline-none m-1 rounded p-2"
+            >
+              Default
+            </button>
+            <button
+              data-act-class="shadow-outline"
+              data-set-theme="dark"
+              class="bg-green-700 focus:outline-none m-1 rounded p-2"
+            >
+              Dark
+            </button>
+            <button
+              data-act-class="shadow-outline"
+              data-set-theme="black"
+              class="bg-green-700 focus:outline-none m-1 rounded p-2"
+            >
+              Black
+            </button>
+            <button
+              data-act-class="shadow-outline"
+              data-set-theme="🌸"
+              class="bg-green-700 focus:outline-none m-1 rounded p-2"
+            >
+              🌸 Pink
+            </button>
+            <button
+              data-act-class="shadow-outline"
+              data-set-theme="🐬"
+              class="bg-green-700 focus:outline-none m-1 rounded p-2"
+            >
+              🐬 Blue
+            </button>
+            <button
+              data-act-class="shadow-outline"
+              data-set-theme="🐤"
+              class="bg-green-700 focus:outline-none m-1 rounded p-2"
+            >
+              🐤 Yellow
+            </button>
+          </div>
+      
+          <div class="m-5">
+            <h2 class="mb-4 text-2xl text-green-700 font-bold">Select</h2>
+            <select
+              data-choose-theme
+              class="focus:outline-none h-10 rounded-full px-3 border"
+            >
+              <option value="">Default</option>
+              <option value="dark">Dark</option>
+              <option value="black">Black</option>
+              <option value="🌸">🌸 Pink</option>
+              <option value="🐬">🐬 Blue</option>
+              <option value="🐤">🐤 Yellow</option>
+            </select>
+          </div>
+      
+          <div class="m-5 bg-white rounded p-5">
+            <h2 class="mb-4 text-2xl text-bold">How to use:</h2>
+            Github:
+            <a
+              class="text-blue-600"
+              href="https://github.com/saadeghi/theme-change"
+              target="_blank"
+            >
+              https://github.com/saadeghi/theme-change
+            </a>
+          </div>
         </div>
       </div>
     </div>
